bug 1287036 draw menuitem background even when not in hover r=stransky+263117

MozReview-Commit-ID: tuf5WXY0d4